[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securepin"
version = "0.1.0"
description = "A CLI tool to generate secure 4 to 6 digit PINs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyperclip",
]

[project.scripts]
securepin = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["utils"]
